--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World get it globe</h1>
+    <div class="bg">
+        <h1>Hello World get it globe</h1>
+        <img src="https://source.unsplash.com/1000x600/daily?pencil">
+
+
+    </div>
 </body>
 </html>
