Another try to make sure I got it

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <div class="bg">
         <h1>Hello World get it globe</h1>
         <img src="https://source.unsplash.com/1000x600/daily?pencil">
+        <p>This is a story about a man named bob. You see bob had a problem. He could not find his way home.</p>
+        <p>So bob found his way to the store where he ate everything from key lime pie to donits</p>
+        <h2>Bob Got Sick</h2>
+
+        <ul>
+            <li>Here is a story</li>
+            <li>of a lovely lady</li>
+        </ul>
 
 
     </div>
